@@ -15,7 +15,7 @@ esniper - a lightweight ebay sniping tool
 
 <B>esniper</B>
 
-[<B>-bdhHmnPrUv</B>]
+[<B>-bdhHimnPrUv</B>]
 
 [<B>-c</B>
 
@@ -100,6 +100,10 @@ Show command line option help.
 
 <DD>
 Show configuration and auction file help.
+<DT><B>-i</B>
+
+<DD>
+Print information on given auctions and exit.
 <DT><B>-l</B>
 
 <DD>
@@ -404,6 +408,6 @@ All rights reserved.
 This document was created by
 <A HREF="http://localhost/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 06:07:14 GMT, January 31, 2005
+Time: 05:33:50 GMT, April 17, 2005
 </BODY>
 </HTML>
